--- a/BasicTools.Client/_Imports.razor
+++ b/BasicTools.Client/_Imports.razor
@@ -10,5 +10,6 @@
 @using BasicTools.Client.Shared
 @using BasicTools.Shared
 @using BasicTools.Shared.Services
-@using Blazorise
-@using Blazorise.Components 
+@using BasicTools.Bootstrap
+@using BasicTools.Bootstrap.Components
+@using BasicTools.Bootstrap.Services
