--- a/BasicTools.Client/Pages/Guids.razor
+++ b/BasicTools.Client/Pages/Guids.razor
@@ -4,7 +4,7 @@ Title = "GUIDs",
 Description = "Generate GUID/UUID values",
 Keywords = "guid, uuid, guid generator, uuid generator, online guid, onlineguid, globally unique identifier, universal unique identifier, java guid, java uuid, C# guid, C# uuid, globally unique identifier, unique identifier, tool, free"
 )]
-@attribute [ToolPage("GUID Generation", "Generate GUID/UUID values and output to various format using templates.", faIcon: "fa-atom")] 
+@attribute [ToolPage("GUID Generation", "Generate GUID/UUID values and output to various format using templates.", "change_circle")] 
 
 <h1>GUID / UUID Generation</h1>
 
@@ -12,15 +12,15 @@ Keywords = "guid, uuid, guid generator, uuid generator, online guid, onlineguid,
     <RightSidebar>
         <h4>Generation Mode:</h4>
         <ul>
-            <li><strong>Default:</strong><br />Creates GUIDs using the <a href="https://docs.microsoft.com/en-us/dotnet/api/system.guid.newguid" target="msRef">default .NET implementation</a> for creating GUIDs (ex: <span class="code">Guid.NewGuid()</span>)</li>
-            <li><strong>Cryptographic:</strong><br />Creates GUIDs using the <a href="https://docs.microsoft.com/en-us/dotnet/api/system.security.cryptography.randomnumbergenerator.getbytes" target="msRef">.NET's Random Number Generator</a> to obtain 16 random bytes and <a href="https://docs.microsoft.com/en-us/dotnet/api/system.guid.-ctor#System_Guid__ctor_System_Byte___" target="msRef">constructing a GUID</a> from it.</li>
+            <li><strong>Default:</strong><br />Creates GUIDs using the <a href="https://docs.microsoft.com/en-us/dotnet/api/system.guid.newguid" class="link-light" target="msRef">default .NET implementation</a> for creating GUIDs (ex: <span class="code">Guid.NewGuid()</span>)</li>
+            <li><strong>Cryptographic:</strong><br />Creates GUIDs using the <a href="https://docs.microsoft.com/en-us/dotnet/api/system.security.cryptography.randomnumbergenerator.getbytes" class="link-light" target="msRef">.NET's Random Number Generator</a> to obtain 16 random bytes and <a href="https://docs.microsoft.com/en-us/dotnet/api/system.guid.-ctor#System_Guid__ctor_System_Byte___" class="link-light" target="msRef">constructing a GUID</a> from it.</li>
         </ul>
 
         <hr />
 
         <h3>What is a GUID?</h3>
         <p class="mb-0">A GUID is an acronyom that stands for Globally Unique Identifier, they are also referred to as UUIDs or Universaly Unique Identifiers - there is no real difference between the two. Technically they are 128-bit unique reference numbers used in computing which are highly unlikely to repeat when generated despite there being no central GUID authority to ensure uniqueness.</p>
-        <p class="text-right"><small><a href="http://guid.one/guid" target="WhatsAGuid">(Full Reference)</a></small></p>
+        <p class="text-right"><small><a href="http://guid.one/guid" class="link-light" target="WhatsAGuid">(Full Reference)</a></small></p>
     </RightSidebar>
 </LayoutSetter>
 
@@ -30,12 +30,12 @@ Keywords = "guid, uuid, guid generator, uuid generator, online guid, onlineguid,
             <DataAnnotationsValidator />
 
             <InputRadioGroup @bind-Value="_createGuidModel.GenerationMode">
-                <span class="mr-3">Generation Mode:</span>
+                <span class="me-3">Generation Mode:</span>
                 @foreach (var mode in (GenerationModes[])Enum.GetValues(typeof(GenerationModes)))
                 {
                     var id = $"mode_{mode}";
 
-                    <div class="form-check form-check-inline" data-toggle="tooltip" title="@mode.GetDescription()">
+                    <div class="form-check form-check-inline" title="@mode.GetDescription()">
                         <InputRadio class="form-check-input" Value="mode" id="@id" />
                         <label class="form-check-label" for="@id">@mode.ToString()</label>
                     </div>
@@ -46,9 +46,7 @@ Keywords = "guid, uuid, guid generator, uuid generator, online guid, onlineguid,
                 <label for="createGuidCount">Specify how many GUIDs you want to create (1-250)</label>
                 <div class="input-group">
                     <InputNumber id="createGuidCount" class="form-control" @bind-Value="_createGuidModel.CreateGuidCount" />
-                    <div class="input-group-append">
-                        <button class="btn btn-outline-primary" type="submit">Create Guid(s)</button>
-                    </div>
+                    <button class="btn btn-outline-primary" type="submit">Create Guid(s)</button>
                 </div>
                 <ValidationMessage class="invalid-feedback" For="() => _createGuidModel.CreateGuidCount" />
             </div>
@@ -66,13 +64,15 @@ Keywords = "guid, uuid, guid generator, uuid generator, online guid, onlineguid,
         @foreach (var exTemp in _exampleTemplates)
         {
             <div class="card mt-2">
-                <div class="card-header">
-                    @exTemp.Name
-                    @if (exTemp.Hint != null)
-                    {
-                        <Icon Class="ml-1" data-toggle="tooltip" title="@exTemp.Hint" Name="IconName.QuestionCircle" />
-                    }
-                    <button class="btn btn-sm btn-outline-info float-right" @onclick="exTemp.Select">Use</button>
+                <div class="card-header d-flex justify-content-between">
+                    <span class="d-inline-flex">
+                        <span class="align-self-center">@exTemp.Name</span>
+                        @if (exTemp.Hint != null)
+                        {
+                            <Icon Class="ms-1 align-self-center" title="@exTemp.Hint" Name="help" Style="IconStyles.TwoTone" />
+                        }
+                    </span>
+                    <button class="btn btn-sm btn-outline-info" @onclick="exTemp.Select">Use</button>
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">@exTemp.Template</h5>
