--- a/BasicTools.Client/Pages/Json.razor
+++ b/BasicTools.Client/Pages/Json.razor
@@ -20,13 +20,32 @@ Keywords = "JSON, javascript object notation, parser, format, online, tool, free
 <div class="row" style="height: calc(100% - 4rem)">
     <div class="col-xl-5">
         <h3>Input</h3>
-        <textarea @bind="Input" class="form-control code" spellcheck="false" />
+        <textarea @bind="Input" class="form-control code disable-wrap" spellcheck="false"  />
     </div>
     <div class="col-xl-2">
-        <button class="btn btn-primary mt-xl-5" style="width:100%;" @onclick="Process">Process</button>
+        <div class="mt-xl-5">Output To:</div>
+        @foreach (Enum value in Enum.GetValues(typeof(JsonOutputModes)))
+        {
+            <div class="form-check">
+                <input class="form-check-input" type="radio" value="@value" name="outputMode" id="output_mode_@value" checked="@OutputMode.Equals(value)" @onchange="OnOutputModeChanged">
+                <label class="form-check-label" for="output_mode_@value">
+                    @value.GetDescription()
+                </label>
+            </div>
+        }
+
+        <button class="btn btn-primary mt-3" style="width:100%;" @onclick="Process">Process</button>
+
     </div>
     <div class="col-xl-5">
         <h3>Output</h3>
-        <textarea @bind="Output" class="form-control code@(OutputIsError ? " is-invalid" : "")" readonly />
+        <textarea @bind="Output" class="form-control code @(OutputIsError ? "is-invalid" : "") @(WrapOutput ? "" : "disable-wrap")" readonly />
     </div>
 </div>
+
+@code {
+    private void OnOutputModeChanged(ChangeEventArgs args)
+    {
+        OutputMode = (JsonOutputModes)Enum.Parse(typeof(JsonOutputModes), (string)args.Value);
+    }
+}
