SEO specify language

--- a/BasicTools.Server/Pages/_Host.cshtml
+++ b/BasicTools.Server/Pages/_Host.cshtml
@@ -2,7 +2,7 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
-<html class="h-100" style="overflow-y: hidden">
+<html lang="en-us" class="h-100" style="overflow-y: hidden">
 
 <head>
     <meta charset="utf-8" />
