--- a/BasicTools.Client/Pages/Guids.razor
+++ b/BasicTools.Client/Pages/Guids.razor
@@ -1,6 +1,6 @@
 ﻿@page "/guids"
 @attribute [PageMetadata( 
-Title = "GUIDs",
+Title = "GUID Generation",
 Description = "Generate GUID/UUID values",
 Keywords = "guid, uuid, guid generator, uuid generator, online guid, onlineguid, globally unique identifier, universal unique identifier, java guid, java uuid, C# guid, C# uuid, globally unique identifier, unique identifier, tool, free"
 )]
