--- a/BasicTools.Client/Pages/Index.razor
+++ b/BasicTools.Client/Pages/Index.razor
@@ -1,11 +1,13 @@
 ﻿@page "/"
 @inject RouteSourceAssemblyProvider RouteSources
 @attribute [PageMetadata(
-Description = "A basic set of free, online tools to help out developers",
-Keywords = "online tool, free, dev tools"
+Title = "Basic Developer Toolbox, By Developers, For Developers",
+IsCompleteTitle = true,
+Description = "A basic set of free, online tools to help out software developers. Create Guids, validate and format Json/Yaml documents, and expect more to come.",
+Keywords = "online tool, free, developer tools"
 )]
 
-<h1>Basic Dev Toolbox</h1>
+<h1>Basic Developer Toolbox</h1>
 
 <p>Your one-stop shop for basic, online developer tools!</p>
 
