--- a/BasicTools.Client/Pages/Json.razor
+++ b/BasicTools.Client/Pages/Json.razor
@@ -1,6 +1,6 @@
 ﻿@page "/json"
 @attribute [PageMetadata(
-Title = "Json",
+Title = "Json Validation and Formatting",
 Description = "Parse, Validate and Format Json documents",
 Keywords = "JSON, javascript object notation, parser, format, online, tool, free"
 )]
