--- a/BasicTools.Client/Pages/Yaml.razor
+++ b/BasicTools.Client/Pages/Yaml.razor
@@ -1,6 +1,6 @@
 ﻿@page "/yaml"
 @attribute [PageMetadata(
-Title = "Yaml",
+Title = "Yaml Validation and Formatting",
 Description = "Parse, Validate and Format Yaml documents",
 Keywords = "Yaml, parser, format, online, tool, free"
 )]
