--- a/BasicTools.Client/Pages/JsonYaml.razor.css
+++ b/BasicTools.Client/Pages/JsonYaml.razor.css
@@ -1,7 +1,8 @@
-﻿textarea {
+﻿.input, .output {
     width: 100%;
     resize: none;
-    height: calc(100% - 4rem);
+    height: calc(100vh - 11rem);
+    background: white;
 }
 
 textarea.disable-wrap {
