--- a/BasicTools.Server/Pages/_Host.cshtml
+++ b/BasicTools.Server/Pages/_Host.cshtml
@@ -16,6 +16,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500|Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
 
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+
     <link href="css/app.css" rel="stylesheet" />
     <link href="BasicTools.Client.styles.css" rel="stylesheet" />
 
@@ -46,6 +48,9 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+
+    @*<script src="js/jquery.json-viewer.js"></script>
+    <script src="js/app.js"></script>*@
 </body>
 
 </html>
