add more textual content

--- a/BasicTools.Client/Pages/Index.razor
+++ b/BasicTools.Client/Pages/Index.razor
@@ -9,7 +9,9 @@ Keywords = "online tool, free, developer tools"
 
 <h1>Basic Developer Toolbox</h1>
 
-<p>Your one-stop shop for basic, online developer tools!</p>
+<h3>Your one-stop shop for basic, online developer tools!</h3>
+
+<p>Create Guids, validate and format Json/Yaml documents. More to come.</p>
 
 <div class="row">
     @foreach (var tool in RouteSources.ToolPages)
@@ -30,3 +32,5 @@ Keywords = "online tool, free, developer tools"
         </div>
     }
 </div>
+
+<p>If you want to suggest another tool, or even better, submit a pull request with a new tool, start on <a href="https://github.com/NArnott/BasicTools">GitHub</a>.</p>
