--- a/BasicTools.Client/Pages/JsonYaml.razor
+++ b/BasicTools.Client/Pages/JsonYaml.razor
@@ -2,7 +2,7 @@
 @attribute [PageMetadata(
 Title = "Json & Yaml Validation and Formatting",
 Description = "Parse, Validate and Format Json and Yaml documents",
-Keywords = "JSON, Yaml, javascript object notation, parser, format, online, tool, free"
+Keywords = "JSON, Yaml, javascript object notation, web based, parser, format, online, tool, free"
 )]
 @attribute [ToolPage("Json & Yaml Tools", "Parse, Validate and Format Json and Yaml documents.", "grading")]
 
@@ -10,6 +10,9 @@ Keywords = "JSON, Yaml, javascript object notation, parser, format, online, tool
 
 <LayoutSetter>
     <RightSidebar>
+        <h3>Overview</h3>
+        <p>Paste or enter a json or yaml document to validate and format it. You can even convert it to JSON, YAML, or XML.</p>
+        <p>Note that all the processing is done in your local browser. No data is passed to any server.</p>
         <h3>Instructions</h3>
         <p>Paste a Json or Yaml document into the Input field, select an output format, and click the Process button.</p>
         <p>If the document is <strong>valid</strong>, a fully formatted document will appear in the Output.</p>
