--- a/BasicTools.Client/Pages/Guids.razor
+++ b/BasicTools.Client/Pages/Guids.razor
@@ -2,7 +2,7 @@
 @attribute [PageMetadata( 
 Title = "GUID Generation",
 Description = "Generate GUID/UUID values",
-Keywords = "guid, uuid, guid generator, uuid generator, online guid, onlineguid, globally unique identifier, universal unique identifier, java guid, java uuid, C# guid, C# uuid, globally unique identifier, unique identifier, tool, free"
+Keywords = "guid, guidgen, uuid, guid generator, uuid generator, web based, online guid, onlineguid, globally unique identifier, universal unique identifier, java guid, java uuid, C# guid, C# uuid, globally unique identifier, unique identifier, tool, free"
 )]
 @attribute [ToolPage("GUID Generation", "Generate GUID/UUID values and output to various format using templates.", "change_circle")] 
 
@@ -10,17 +10,22 @@ Keywords = "guid, uuid, guid generator, uuid generator, online guid, onlineguid,
 
 <LayoutSetter>
     <RightSidebar>
+        <h3>Overview</h3>
+        <p>Generate one or many GUID values, using templates to format the output. The template can be as simple as <code>{0}</code> to produce an unformated guid, to as complicated as a complete language statement <code>var guid{1} = Guid.Parse("{0}");</code>.</p>
+        <ul>
+            <li><code>{0}</code> represents the generated guid value itself</li>
+            <li><code>{1}</code> represents the current count of the guid being generated.</li>
+        </ul>
+
+        <h3>What is a GUID?</h3>
+        <p class="mb-0">A GUID is an acronyom that stands for Globally Unique Identifier, they are also referred to as UUIDs or Universaly Unique Identifiers - there is no real difference between the two. Technically they are 128-bit unique reference numbers used in computing which are highly unlikely to repeat when generated despite there being no central GUID authority to ensure uniqueness.</p>
+        <p class="text-right"><small><a href="http://guid.one/guid" class="link-light" target="WhatsAGuid">(Full Reference)</a></small></p>
+
         <h4>Generation Mode:</h4>
         <ul>
             <li><strong>Default:</strong><br />Creates GUIDs using the <a href="https://docs.microsoft.com/en-us/dotnet/api/system.guid.newguid" class="link-light" target="msRef">default .NET implementation</a> for creating GUIDs (ex: <span class="code">Guid.NewGuid()</span>)</li>
             <li><strong>Cryptographic:</strong><br />Creates GUIDs using the <a href="https://docs.microsoft.com/en-us/dotnet/api/system.security.cryptography.randomnumbergenerator.getbytes" class="link-light" target="msRef">.NET's Random Number Generator</a> to obtain 16 random bytes and <a href="https://docs.microsoft.com/en-us/dotnet/api/system.guid.-ctor#System_Guid__ctor_System_Byte___" class="link-light" target="msRef">constructing a GUID</a> from it.</li>
         </ul>
-
-        <hr />
-
-        <h3>What is a GUID?</h3>
-        <p class="mb-0">A GUID is an acronyom that stands for Globally Unique Identifier, they are also referred to as UUIDs or Universaly Unique Identifiers - there is no real difference between the two. Technically they are 128-bit unique reference numbers used in computing which are highly unlikely to repeat when generated despite there being no central GUID authority to ensure uniqueness.</p>
-        <p class="text-right"><small><a href="http://guid.one/guid" class="link-light" target="WhatsAGuid">(Full Reference)</a></small></p>
     </RightSidebar>
 </LayoutSetter>
 
