--- a/BasicTools.Server/Pages/_Host.cshtml
+++ b/BasicTools.Server/Pages/_Host.cshtml
@@ -1,5 +1,15 @@
 @page
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using System.Reflection
+
+@functions {
+    private static readonly string VERSION = ((AssemblyInformationalVersionAttribute)Attribute.GetCustomAttribute(typeof(BasicTools.Server.Program).Assembly, typeof(AssemblyInformationalVersionAttribute), false)).InformationalVersion;
+
+    private static string VersionedHRef(string input)
+    {
+        return $"{input}?ver={VERSION}";
+    }
+}
 
 <!DOCTYPE html>
 <html lang="en-us" class="h-100" style="overflow-y: hidden">
@@ -18,8 +28,8 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
-    <link href="css/app.css" rel="stylesheet" />
-    <link href="BasicTools.Client.styles.css" rel="stylesheet" />
+    <link href="@VersionedHRef("css/app.css")" rel="stylesheet" />
+    <link href="@VersionedHRef("BasicTools.Client.styles.css")" rel="stylesheet" />
 
     <environment include="Production">
         <!-- Google AdSense Tag -->
@@ -48,9 +58,6 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
-
-    @*<script src="js/jquery.json-viewer.js"></script>
-    <script src="js/app.js"></script>*@
 </body>
 
 </html>
