--- a/BasicTools.Client/Shared/LinedTextArea.razor
+++ b/BasicTools.Client/Shared/LinedTextArea.razor
@@ -3,7 +3,7 @@
 
 <div class="d-flex">
     <canvas @ref="_canvasRef" width="48" class="me-2" />
-    <textarea @ref="_textAreaRef" @bind="Value" class="flex-fill form-control code @TextAreaCssClass" spellcheck="false" />
+    <textarea @ref="_textAreaRef" @bind="Value" class="flex-fill code @TextAreaCssClass" spellcheck="false" />
 </div>
 
 @code { 
