--- a/BasicTools.Client/_Imports.razor
+++ b/BasicTools.Client/_Imports.razor
@@ -10,6 +10,4 @@
 @using BasicTools.Client.Shared
 @using BasicTools.Shared
 @using BasicTools.Shared.Services
-@using BasicTools.Bootstrap
-@using BasicTools.Bootstrap.Components
-@using BasicTools.Bootstrap.Services
+@using MudBlazor
