--- a/BasicTools.Client/Pages/Guids.razor
+++ b/BasicTools.Client/Pages/Guids.razor
@@ -1,109 +1,139 @@
 ﻿@page "/guids"
-@attribute [PageMetadata( 
+@attribute [PageMetadata(
 Title = "GUID Generation",
 Description = "Generate GUID/UUID values",
 Keywords = "guid, guidgen, uuid, guid generator, uuid generator, web based, online guid, onlineguid, globally unique identifier, universal unique identifier, java guid, java uuid, C# guid, C# uuid, globally unique identifier, unique identifier, tool, free"
 )]
-@attribute [ToolPage("GUID Generation", "Generate GUID/UUID values and output to various format using templates.", "change_circle")] 
+@attribute [ToolPage("GUID Generation", "Generate GUID/UUID values and output to various format using templates.", "Icons.Material.Outlined.ChangeCircle")]
 
-<h1>GUID / UUID Generation</h1>
+<MudText Typo="Typo.h3">GUID / UUID Generation</MudText>
 
 <LayoutSetter>
     <RightSidebar>
-        <h3>Overview</h3>
-        <p>Generate one or many GUID values, using templates to format the output. The template can be as simple as <code>{0}</code> to produce an unformated guid, to as complicated as a complete language statement <code>var guid{1} = Guid.Parse("{0}");</code>.</p>
+        <MudText Typo="Typo.h5">Overview</MudText>
+        <MudText>Generate one or many GUID values, using templates to format the output. The template can be as simple as <code>{0}</code> to produce an unformated guid, to as complicated as a complete language statement (<code>var guid{1} = Guid.Parse("{0}");</code>).</MudText>
         <ul>
             <li><code>{0}</code> represents the generated guid value itself</li>
             <li><code>{1}</code> represents the current count of the guid being generated.</li>
         </ul>
 
-        <h3>What is a GUID?</h3>
-        <p class="mb-0">A GUID is an acronyom that stands for Globally Unique Identifier, they are also referred to as UUIDs or Universaly Unique Identifiers - there is no real difference between the two. Technically they are 128-bit unique reference numbers used in computing which are highly unlikely to repeat when generated despite there being no central GUID authority to ensure uniqueness.</p>
-        <p class="text-right"><small><a href="http://guid.one/guid" class="link-light" target="WhatsAGuid">(Full Reference)</a></small></p>
+        <MudText Typo="Typo.h5">What is a GUID?</MudText>
+        <MudText>
+            A GUID is an acronyom that stands for Globally Unique Identifier, they are also referred to as UUIDs or Universaly Unique Identifiers - there is no real difference between the two. Technically they are 128-bit unique reference numbers used in computing which are highly unlikely to repeat when generated despite there being no central GUID authority to ensure uniqueness.
+            <MudLink Href="http://guid.one/guid" Target="WhatsAGuid" Typo="Typo.subtitle2" Class="ms-auto"><small>(Full Reference)</small></MudLink>
+        </MudText>
 
-        <h4>Generation Mode:</h4>
-        <ul>
-            <li><strong>Default:</strong><br />Creates GUIDs using the <a href="https://docs.microsoft.com/en-us/dotnet/api/system.guid.newguid" class="link-light" target="msRef">default .NET implementation</a> for creating GUIDs (ex: <span class="code">Guid.NewGuid()</span>)</li>
-            <li><strong>Cryptographic:</strong><br />Creates GUIDs using the <a href="https://docs.microsoft.com/en-us/dotnet/api/system.security.cryptography.randomnumbergenerator.getbytes" class="link-light" target="msRef">.NET's Random Number Generator</a> to obtain 16 random bytes and <a href="https://docs.microsoft.com/en-us/dotnet/api/system.guid.-ctor#System_Guid__ctor_System_Byte___" class="link-light" target="msRef">constructing a GUID</a> from it.</li>
-        </ul>
+        <MudText Typo="Typo.h6">Generation Mode:</MudText>
+        <MudText><strong>Default</strong><br />Creates GUIDs using the <MudLink Href="https://docs.microsoft.com/en-us/dotnet/api/system.guid.newguid" Target="msRef">default .NET implementation</MudLink> for creating GUIDs (<code>Guid.NewGuid()</code>)</MudText>
+        <MudText><strong>Cryptographic</strong><br />Creates GUIDs using the <MudLink Href="https://docs.microsoft.com/en-us/dotnet/api/system.security.cryptography.randomnumbergenerator.getbytes" Target="msRef">.NET's Random Number Generator</MudLink> to obtain 16 random bytes and <MudLink Href="https://docs.microsoft.com/en-us/dotnet/api/system.guid.-ctor#System_Guid__ctor_System_Byte___" Target="msRef">constructing a GUID</MudLink> from it.</MudText>
     </RightSidebar>
 </LayoutSetter>
 
-<div class="row">
-    <div class="col-xl-5 col-lg-6">
-        <EditForm EditContext="_editContext" OnValidSubmit="CreateGuids">
-            <DataAnnotationsValidator />
+<MudGrid>
+    <MudItem lg="6">
+        <MudPaper>
+            <MudForm @ref="_form" @bind-IsValid="_formIsValid" Class="pa-3" @onkeydown="OnFormKeyDown">
+                <MudText Typo="Typo.caption" Class="pb-0">Generation Mode*</MudText>
+                <div class="d-flex">
+                    <MudRadioGroup Required="true" RequiredError="Generation Mode is required" @bind-SelectedOption="GenerationMode">
+                        <MudRadio Option="@GenerationModes.Default">@GenerationModes.Default.ToString()</MudRadio>
+                        <MudRadio Option="@GenerationModes.Cryptographic">@GenerationModes.Cryptographic.ToString()</MudRadio>
+                    </MudRadioGroup>
+                </div>
+                
+                <div class="d-flex">
+                    <MudNumericField AutoFocus="true" Label="Number of GUIDs to create" @bind-Value="CreateGuidCount" Immediate="true" Min="1" Max="250" Required="true" />
+                    <MudButton Class="ms-3 align-self-end" Color="Color.Primary" Variant="Variant.Outlined" Disabled="!_formIsValid" OnClick="CreateGuids">Create Guid(s)</MudButton>
+                </div>
 
-            <InputRadioGroup @bind-Value="_createGuidModel.GenerationMode">
-                <span class="me-3">Generation Mode:</span>
-                @foreach (var mode in (GenerationModes[])Enum.GetValues(typeof(GenerationModes)))
+                <MudTextField Class="mt-6 code" Label="Output Template" Variant="Variant.Outlined" @bind-Value="Template" Lines="3" Required="true" ErrorText="Invalid Template" Validation="new Func<string, bool>(IsTemplateValid)" />
+
+                @if (Sample.IsValid)
                 {
-                    var id = $"mode_{mode}";
-
-                    <div class="form-check form-check-inline" title="@mode.GetDescription()">
-                        <InputRadio class="form-check-input" Value="mode" id="@id" />
-                        <label class="form-check-label" for="@id">@mode.ToString()</label>
-                    </div>
+                <MudText>Sample Output: <span class="code">@Sample</span></MudText>
                 }
-            </InputRadioGroup>
 
-            <div class="form-group">
-                <label for="createGuidCount">Specify how many GUIDs you want to create (1-250)</label>
-                <div class="input-group">
-                    <InputNumber id="createGuidCount" class="form-control" @bind-Value="_createGuidModel.CreateGuidCount" />
-                    <button class="btn btn-outline-primary" type="submit">Create Guid(s)</button>
-                </div>
-                <ValidationMessage class="invalid-feedback" For="() => _createGuidModel.CreateGuidCount" />
-            </div>
-
-            <div class="form-group">
-                <label for="template">Output Template</label>
-                <InputTextAreaOnInput id="template" class="form-control" @bind-Value="_createGuidModel.Template" />
-
-                <p>Sample Output:<br /><span class="code">@_createGuidModel.Sample.ToString()</span></p>
-            </div>
-        </EditForm>
-
-        <h3>Example Templates</h3>
-
-        @foreach (var exTemp in _exampleTemplates)
-        {
-            <div class="card mt-2">
-                <div class="card-header d-flex justify-content-between">
-                    <span class="d-inline-flex">
-                        <span class="align-self-center">@exTemp.Name</span>
-                        @if (exTemp.Hint != null)
-                        {
-                            <Icon Class="ms-1 align-self-center" title="@exTemp.Hint" Name="help" Style="IconStyles.TwoTone" />
-                        }
-                    </span>
-                    <button class="btn btn-sm btn-outline-info" @onclick="exTemp.Select">Use</button>
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">@exTemp.Template</h5>
-                    <small class="card-text">Sample: <span class="code">@exTemp.Sample</span></small>
-                </div>
-            </div>
-        }
-    </div>
-
-    <div class="col-xl-7 col-lg-6">
+                <MudButton Color="Color.Tertiary" Variant="Variant.Outlined" OnClick="ShowTemplatesDialog">Template Examples</MudButton>
+            </MudForm>
+        </MudPaper>
+    </MudItem>
+    <MudItem lg="6">
         @if (_guids != null)
         {
             @if (_guids.Length > 1)
             {
-                <button class="btn btn-secondary mb-2" @onclick="CopyAllGuids">Copy All</button>
+                <MudButton StartIcon="@Icons.Outlined.ContentCopy" Color="Color.Secondary" Variant="Variant.Filled" Class="mb-2" @onclick="CopyAllGuids">Copy All</MudButton>
             }
 
-            <div class="list-group">
-                @foreach (var guid in _guids)
-                {
-                    <button class="list-group-item list-group-item-action code @(guid.IsActive ? "active" : "") @(guid.WasActive ? "list-group-item-dark" : "")" @onclick="async () => await SelectGuid(guid)">@guid</button>
-                }
-            </div>
+            <MudPaper>
+                <MudList Clickable="true">
+                    @foreach (var guid in _guids)
+                    {
+                        <MudListItem Class="@((guid.IsActive ? "active" : "") + (guid.WasActive ? "was-active" : ""))" OnClick="async () => await SelectGuid(guid)"><code>@guid</code></MudListItem>
+                    }
+                </MudList>
+            </MudPaper>
         }
-    </div>
-</div>
+    </MudItem>
+</MudGrid>
+
+<MudDialog @ref="_templatesDialog">
+    <DialogContent>
+        <MudGrid Style="overflow-y: scroll; max-height: 75vh">
+            @foreach (var exTemp in _exampleTemplates)
+            {
+                <MudItem md="6" Style="width: 100%">
+                    <MudCard Elevation="2">
+                        <MudCardHeader>
+                            <CardHeaderAvatar>
+                                <MudIcon Icon="@Icons.TwoTone.Help" Size="Size.Large" />
+                            </CardHeaderAvatar>
+                            <CardHeaderContent>
+                                <MudText Typo="Typo.h6">@exTemp.Name</MudText>
+                            </CardHeaderContent>
+                        </MudCardHeader>
+                        <MudCardContent>
+                            <MudText><code>@exTemp.Template</code></MudText>
+                            <MudText><small>Sample: <span class="code">@exTemp.Sample</span></small></MudText>
+                        </MudCardContent>
+                        <MudCardActions>
+                            <MudButton Class="ms-auto" Variant="Variant.Filled" Color="Color.Primary" OnClick="() => { exTemp.Select(); _templatesDialog.Close(); }">Select Template</MudButton>
+                        </MudCardActions>
+                    </MudCard>
+                </MudItem>
+            }
+        </MudGrid>
+    </DialogContent>
+    <DialogActions>
+        <MudButton Variant="Variant.Filled" Color="Color.Default" OnClick="() => _templatesDialog.Close()" Class="px-10">Close</MudButton>
+    </DialogActions>
+</MudDialog>
 
 
+@code {
+    bool _formIsValid;
+    MudForm _form;
 
+    MudDialog _templatesDialog;
+
+    private void ShowTemplatesDialog()
+    {
+        _templatesDialog.Show("Template Examples", options: new DialogOptions()
+        {
+            FullWidth = true,
+            MaxWidth = MaxWidth.Medium,
+            CloseButton = true
+        });
+    }
+
+    private void OnFormKeyDown(KeyboardEventArgs e)
+    {
+        if (e.Code == "Enter" || e.Code == "NumpadEnter")
+        {
+            _form.Validate();
+
+            if (_form.IsValid)
+                CreateGuids();
+        }
+    }
+}
