--- a/BasicTools.Client/Pages/Index.razor
+++ b/BasicTools.Client/Pages/Index.razor
@@ -7,30 +7,30 @@ Description = "A basic set of free, online tools to help out software developers
 Keywords = "online tool, free, developer tools"
 )]
 
-<h1>Basic Developer Toolbox</h1>
+<MudText Typo="Typo.h2">Basic Developer Toolbox</MudText>
+<MudText Typo="Typo.subtitle1">Your one-stop shop for basic, online developer tools!</MudText>
+<MudText>Create Guids, validate and format Json/Yaml documents. More to come.</MudText>
 
-<h3>Your one-stop shop for basic, online developer tools!</h3>
-
-<p>Create Guids, validate and format Json/Yaml documents. More to come.</p>
-
-<div class="row">
+<MudGrid Class="my-2">
     @foreach (var tool in RouteSources.ToolPages)
     {
-        <div class="col-xxl-3 col-xl-4 col-lg-6 mb-4 d-flex align-items-stretch">
-            <div class="card" style="width: 100%">
-                <div class="card-header d-inline-flex">
-                    <Icon Class="me-2 align-self-center" Name="@tool.Value.Icon" Size="IconSizes.Large" Style="IconStyles.TwoTone" />
-                    <span class="h4 mb-0 align-self-center">@tool.Value.Name</span>
-                </div>
-                <div class="card-body">
-                    <p class="card-text">@tool.Value.Description</p>
-                </div>
-                <div class="card-footer text-end">
-                    <NavLink href="@tool.Key" class="btn btn-primary">Use Tool</NavLink>
-                </div>
-            </div>
-        </div>
+        <MudItem xl="3" lg="4" sm="6" Class="d-flex align-stretch" Style="width: 100%">
+            <MudCard Style="width: 100%">
+                <MudCardHeader>
+                    <CardHeaderAvatar>
+                        <MudIcon Icon="@tool.Value.GetMudIcon()" Size="Size.Large" />
+                    </CardHeaderAvatar>
+                    <CardHeaderContent>@tool.Value.Name</CardHeaderContent>
+                </MudCardHeader>
+                <MudCardContent>
+                    <MudText>@tool.Value.Description</MudText>
+                </MudCardContent>
+                <MudCardActions>
+                    <MudButton Variant="Variant.Text" Color="Color.Primary" Link="@tool.Key" >Use Tool</MudButton>
+                </MudCardActions>
+            </MudCard>
+        </MudItem>
     }
-</div>
+</MudGrid>
 
-<p>If you want to suggest another tool, or even better, submit a pull request with a new tool, start on <a href="https://github.com/NArnott/BasicTools">GitHub</a>.</p>
+<MudText Typo="Typo.body2">If you want to suggest another tool, or even better, submit a pull request with a new tool, start on <MudLink Typo="Typo.inherit" Href="https://github.com/NArnott/BasicTools">GitHub</MudLink>.</MudText>
