--- a/BasicTools.Client/Pages/JsonYaml.razor.css
+++ b/BasicTools.Client/Pages/JsonYaml.razor.css
@@ -1,8 +1,13 @@
 ﻿::deep .input, ::deep .output {
     width: 100%;
     resize: none;
-    height: calc(100vh - 11rem);
+    height: calc(100vh - 12.5rem);
     background: white;
+    border: 1px solid black;
+}
+
+::deep textarea.input, ::deep textarea.output {
+    padding: 5px;
 }
 
 textarea.disable-wrap {
