--- a/BasicTools.Client/Shared/NavMenu.razor
+++ b/BasicTools.Client/Shared/NavMenu.razor
@@ -1,34 +1,11 @@
 ﻿@inject RouteSourceAssemblyProvider RouteSources
 
-    <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark h-100" style="width: 280px;">
-        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-            <span class="fs-4">Basic Dev Tools</span>
-        </a>
-        <hr>
-        <ul class="nav nav-pills flex-column mb-auto">
-            <li class="nav-item">
-                <NavLink class="nav-link text-white d-flex" href="" Match="NavLinkMatch.All">
-                    <Icon Name="home" Class="me-2" Style="IconStyles.Outlined" /> Home
-                </NavLink>
-            </li>
-            @foreach (var tool in RouteSources.ToolPages)
-            {
-                <li class="nav-item">
-                    <NavLink class="nav-link text-white d-flex" href="@tool.Key">
-                        <Icon Name="@tool.Value.Icon" Class="me-2" Style="IconStyles.Outlined" /> @tool.Value.Name
-                    </NavLink>
-                </li>
-            }
-        </ul>
-    </div>
+<MudNavMenu>
+    <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Outlined.Home">Home</MudNavLink>
 
-    @code {
-        private bool collapseNavMenu = true;
-
-        private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-        private void ToggleNavMenu()
-        {
-            collapseNavMenu = !collapseNavMenu;
-        }
+    @foreach (var tool in RouteSources.ToolPages)
+    {
+        <MudNavLink Href="@tool.Key" Icon="@tool.Value.GetMudIcon()">@tool.Value.Name</MudNavLink>
     }
+
+</MudNavMenu>
