--- a/BasicTools.Client/Pages/Guids.razor
+++ b/BasicTools.Client/Pages/Guids.razor
@@ -1,7 +1,7 @@
 ﻿@page "/guids"
 @attribute [PageMetadata(
 Title = "GUID Generation",
-Description = "Generate GUID/UUID values",
+Description = "Generate GUID/UUID values. This tool is an easy to use, online tool to create guids for all sorts of situations. Includes templating support.",
 Keywords = "guid, guidgen, uuid, guid generator, uuid generator, web based, online guid, onlineguid, globally unique identifier, universal unique identifier, java guid, java uuid, C# guid, C# uuid, globally unique identifier, unique identifier, tool, free"
 )]
 @attribute [ToolPage("GUID Generation", "Generate GUID/UUID values and output to various format using templates.", "Icons.Material.Outlined.ChangeCircle")]
