--- a/BasicTools.Client/Pages/Base64.razor
+++ b/BasicTools.Client/Pages/Base64.razor
@@ -1,7 +1,7 @@
 ﻿@page "/base64"
 @attribute [PageMetadata(
-Title = "Base 64 Conversion",
-Description = "Convert text from/to Base64",
+Title = "Base 64 Encoding",
+Description = "Encode to Base64 or Decode from Base64. This tool is an easy to use, online tool to encode your data.",
 Keywords = "base 64, base64, conversion, encoding, decoding, web based, online base64, tool, free"
 )]
 @attribute [ToolPage("Base 64 Encoding", "Convert data to and from Base64 encoding.", "Icons.Material.Outlined.TextSnippet")]
