--- a/BasicTools.Client/_Imports.razor
+++ b/BasicTools.Client/_Imports.razor
@@ -7,7 +7,6 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using BasicTools.Client
+@using BasicTools.Client.Services
 @using BasicTools.Client.Shared
-@using BasicTools.Shared
-@using BasicTools.Shared.Services
 @using MudBlazor
