make pages work better with CloudFront

--- a/BasicTools.Client/Pages/Base64.razor
+++ b/BasicTools.Client/Pages/Base64.razor
@@ -1,4 +1,4 @@
-﻿@page "/base64"
+﻿@page "/base64/"
 @attribute [PageMetadata(
 Title = "Base 64 Encoding",
 Description = "Encode to Base64 or Decode from Base64. This tool is an easy to use, online tool to encode your data.",
