--- a/BasicTools.Client/Pages/JsonYaml.razor
+++ b/BasicTools.Client/Pages/JsonYaml.razor
@@ -1,4 +1,4 @@
-﻿@page "/json-yaml"
+﻿@page "/json-yaml/"
 @attribute [PageMetadata(
 Title = "Json & Yaml Validation and Formatting",
 Description = "A tool for parsing, validating and beautifying json and yaml documents. Can even export to XML.",
