--- a/BasicTools.Client/Pages/Guids.razor
+++ b/BasicTools.Client/Pages/Guids.razor
@@ -1,4 +1,4 @@
-﻿@page "/guids"
+﻿@page "/guids/"
 @attribute [PageMetadata(
 Title = "GUID Generation",
 Description = "Generate GUID/UUID values. This tool is an easy to use, online tool to create guids for all sorts of situations. Includes templating support.",
