Convert Blazor Hosting to Real static site (#5)
* ignore prerender/output

* restore Index.html

* Revert "ignore prerender/output"

This reverts commit 6a9b22889df50596a6525c80aecdc5a76cea63ad.

* consolidate client

* test adj

* warnings cleanup

* set up github actions

* PR setup

* PR action update

* removed environment

* CI update

* sync with S3 & invalidate CF Dist

* make pages work better with CloudFront

--- a/BasicTools.Client/Pages/Guids.razor
+++ b/BasicTools.Client/Pages/Guids.razor
@@ -1,4 +1,4 @@
-﻿@page "/guids"
+﻿@page "/guids/"
 @attribute [PageMetadata(
 Title = "GUID Generation",
 Description = "Generate GUID/UUID values. This tool is an easy to use, online tool to create guids for all sorts of situations. Includes templating support.",
@@ -112,9 +112,9 @@ Keywords = "guid, guidgen, uuid, guid generator, uuid generator, web based, onli
 
 @code {
     bool _formIsValid;
-    MudForm _form;
+    MudForm _form = default!;
 
-    MudDialog _templatesDialog;
+    MudDialog _templatesDialog = default!;
 
     private void ShowTemplatesDialog()
     {
